try read only `neo4j` DB without authentication

--- a/docker-variables.env
+++ b/docker-variables.env
@@ -4,7 +4,7 @@
 FILL_DB_ON_STARTUP=yes
 
 # Name of database created by BioCypher; Relevant for path to import script => import/$BC_TABLE_NAME/neo4j-admin-import-call.sh
-BC_TABLE_NAME=docker
+BC_TABLE_NAME=neo4j
 
 
 ### NEO4j settings ##
@@ -16,7 +16,10 @@ NEO4J_USER=neo4j
 NEO4J_PASSWORD=neo4jpassword
 
 # Username and password divided by "/" for Neo4j; Has to match $NEO4J_USER/$NEO4J_PASSWORD
-NEO4J_AUTH=neo4j/neo4jpassword
+NEO4J_AUTH=none
+
+# Read only access
+# NEO4J_dbms_databases_default__to__read__only=true
 
 
 ### DO NOT CHANGE ###
