--- a/docker-variables.env
+++ b/docker-variables.env
@@ -18,6 +18,8 @@ NEO4J_PASSWORD=neo4jpassword
 # Username and password divided by "/" for Neo4j; Has to match $NEO4J_USER/$NEO4J_PASSWORD
 NEO4J_AUTH=none
 
+EXTENSION_SCRIPT=./extension_script.sh
+
 # Read only access
 # NEO4J_dbms_databases_default__to__read__only=true
 
