--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       args:
         - "BIOCYPHER_CONFIG=config/biocypher_docker_config.yaml"
-    container_name: biocypher-project-template-container
+    container_name: biocypher-meta-graph
     env_file:
       - docker-variables.env
     ports:
