--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,44 @@
 version: '3.3'
 
 services:
-  neo4j:
+
+  biocypher-builder:
     build:
       context: .
-      args:
-        - "BIOCYPHER_CONFIG=config/biocypher_docker_config.yaml"
+      dockerfile: Dockerfile-bc
     container_name: biocypher-meta-graph
-    env_file:
-      - docker-variables.env
-    ports:
-      - 7474:7474
-      - 7687:7687
     volumes:
-      - biocypher_neo4j_volume:/data
- #   restart: always
+      - ./data:/usr/app/data
+    healthcheck:
+      test: ["CMD-SHELL", "[ -f ./data/neo4j/neo4j-admin-import-call.sh ] || exit 1"]
+      interval: 1s
 
-volumes:
-  biocypher_neo4j_volume:
+  neo4j-builder:
+    build:
+      context: .
+      dockerfile: Dockerfile-neo
+    container_name: biocypher-meta-graph-builder
+    environment:
+      NEO4J_AUTH: none
+      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+    volumes:
+      - ./data:/data
+    depends_on:
+      biocypher-builder:
+        condition: service_healthy
+
+  # neo4j-reader:
+  #   image: neo4j:4.4-enterprise
+  #   container_name: biocypher-meta-graph-reader
+  #   volumes:
+  #     - ./data:/data
+  #   environment:
+  #     NEO4J_AUTH: none
+  #     NEO4J_dbms_databases_default__to__read__only: true
+  #     NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+  #   ports:
+  #     - "127.0.0.1:55:7474"
+  #     - "127.0.0.1:56:7687"
+  #   command: neo4j
+  #   depends_on:
+  #     - neo4j-builder
