--- a/config/biocypher_docker_config.yaml
+++ b/config/biocypher_docker_config.yaml
@@ -4,7 +4,7 @@ biocypher:
   offline: true
   debug: false
   schema_config_path: config/schema_config.yaml
-  output_directory: data/neo4j
+  output_directory: data/build2neo
 
   head_ontology:
     url: https://github.com/biolink/biolink-model/raw/v3.2.1/biolink-model.owl.ttl
@@ -23,4 +23,4 @@ neo4j:
   array_delimiter: '|'
   skip_duplicate_nodes: true
   skip_bad_relationships: true
-  import_call_file_prefix: data/neo4j/
+  import_call_file_prefix: /data/build2neo/
