--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,43 +2,56 @@ version: '3.3'
 
 services:
 
-  biocypher-builder:
-    build:
-      context: .
-      dockerfile: Dockerfile-bc
-    container_name: biocypher-meta-graph
+  build:
+    image: docker.io/andimajore/biocyper_base:python3.10
+    container_name: build
     volumes:
-      - ./data:/usr/app/data
-    healthcheck:
-      test: ["CMD-SHELL", "[ -f ./data/neo4j/neo4j-admin-import-call.sh ] || exit 1"]
-      interval: 1s
+      - ./config/biocypher_docker_config.yaml:/usr/app/config/biocypher_config.yaml
+      - .:/usr/app
+    command:
+      - /bin/bash
+      - -c
+      - |
+        cd /usr/app
+        rm -rf data
+        poetry config virtualenvs.create false
+        poetry install
+        python3 create_knowledge_graph.py
 
-  neo4j-builder:
-    build:
-      context: .
-      dockerfile: Dockerfile-neo
-    container_name: biocypher-meta-graph-builder
+  import:
+    image: neo4j:4.4-enterprise
+    container_name: import
     environment:
       NEO4J_AUTH: none
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+      FILL_DB_ON_STARTUP: "yes"
     volumes:
       - ./data:/data
+      - ./data/build2neo/neo4j-admin-import-call.sh:/usr/import.sh
+    command:
+      - /bin/bash
+      - -c
+      - |
+        if [ -f /usr/import.sh ]; then
+          chmod +x /usr/import.sh
+          /usr/import.sh
+        fi
     depends_on:
-      biocypher-builder:
-        condition: service_healthy
+      build:
+        condition: service_completed_successfully
 
-  # neo4j-reader:
-  #   image: neo4j:4.4-enterprise
-  #   container_name: biocypher-meta-graph-reader
-  #   volumes:
-  #     - ./data:/data
-  #   environment:
-  #     NEO4J_AUTH: none
-  #     NEO4J_dbms_databases_default__to__read__only: true
-  #     NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
-  #   ports:
-  #     - "127.0.0.1:55:7474"
-  #     - "127.0.0.1:56:7687"
-  #   command: neo4j
-  #   depends_on:
-  #     - neo4j-builder
+  deploy:
+    image: neo4j:4.4-enterprise
+    container_name: deploy
+    volumes:
+      - ./data:/data
+    environment:
+      NEO4J_AUTH: "none"
+      NEO4J_dbms_databases_default__to__read__only: "true"
+      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+    ports:
+      - 7474:7474
+      - 7687:7687
+    depends_on:
+      import:
+        condition: service_completed_successfully
