apparently the DBMS needs to be started at .. least once in write mode to create maintenance files before you can .. start in read only mode. currently, doing this by simple start-stop .. with sleep in between. there may be a more elegant solution.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,9 @@ services:
           chmod +x /usr/import.sh
           /usr/import.sh
         fi
+        neo4j start
+        sleep 10
+        neo4j stop
     depends_on:
       build:
         condition: service_completed_successfully
