--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,12 +49,12 @@ services:
     volumes:
       - ./data:/data
     environment:
-      NEO4J_AUTH: "none"
+      NEO4J_dbms_security_auth__enabled: "false"
       NEO4J_dbms_databases_default__to__read__only: "true"
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
     ports:
-      - 7474:7474
-      - 7687:7687
+      - "127.0.0.1:7474:7474"
+      - "127.0.0.1:7687:7687"
     depends_on:
       import:
         condition: service_completed_successfully
