--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       NEO4J_dbms_security_auth__enabled: "false"
       NEO4J_dbms_databases_default__to__read__only: "true"
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+      NEO4J_browser_post__connect__cmd: "play https://raw.githubusercontent.com/biocypher/meta-graph/read_only/hello.html"
     ports:
       - "127.0.0.1:7474:7474"
       - "127.0.0.1:7687:7687"
