--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,14 +48,23 @@ services:
     container_name: deploy
     volumes:
       - ./data:/data
+      - ./html/index.html:/data/guides/index.html
     environment:
       NEO4J_dbms_security_auth__enabled: "false"
       NEO4J_dbms_databases_default__to__read__only: "true"
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
-      NEO4J_browser_post__connect__cmd: "play https://raw.githubusercontent.com/biocypher/meta-graph/read_only/hello.html"
+      # NEO4J_browser_remote__content__hostname__whitelist: "*"
+      # NEO4J_browser_post__connect__cmd: "play https://meta-graph-guide.web.app/index.html"
     ports:
       - "127.0.0.1:7474:7474"
       - "127.0.0.1:7687:7687"
     depends_on:
       import:
         condition: service_completed_successfully
+
+  # guide:
+  #   image: nginx:alpine
+  #   volumes:
+  #     - ./html:/usr/share/nginx/html
+  #   ports:
+  #     - "8080:80"
