--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,39 +7,26 @@ services:
     container_name: build
     volumes:
       - ./config/biocypher_docker_config.yaml:/usr/app/config/biocypher_config.yaml
-      - .:/usr/app
+      - biocypher_data:/usr/app/data
+      - biocypher_logs:/usr/app/biocypher-log
+      - .:/usr/app/
     environment:
       BIOCYPHER_GITHUB_PROJECT_TOKEN: ${BIOCYPHER_GITHUB_PROJECT_TOKEN}
     command:
       - /bin/bash
-      - -c
-      - |
-        cd /usr/app
-        rm -rf data
-        poetry install
-        python3 create_knowledge_graph.py
+      - /usr/app/scripts/build.sh
 
   import:
     image: neo4j:4.4-enterprise
     container_name: import
-    environment:
-      NEO4J_AUTH: none
-      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
-      FILL_DB_ON_STARTUP: "yes"
+    env_file:
+      - envs/import.env
     volumes:
-      - ./data:/data
-      - ./data/build2neo/neo4j-admin-import-call.sh:/usr/import.sh
+      - biocypher_data:/data
+      - ./scripts/import.sh:/scripts/import.sh
     command:
       - /bin/bash
-      - -c
-      - |
-        if [ -f /usr/import.sh ]; then
-          chmod +x /usr/import.sh
-          /usr/import.sh
-        fi
-        neo4j start
-        sleep 10
-        neo4j stop
+      - /scripts/import.sh
     depends_on:
       build:
         condition: service_completed_successfully
@@ -48,12 +35,12 @@ services:
     image: neo4j:4.4-enterprise
     container_name: deploy
     volumes:
-      - ./data:/data
-      - ./html/index.html:/data/guides/index.html
+      - biocypher_data:/data
+    env_file:
+      - envs/deploy.env
     environment:
       NEO4J_dbms_security_auth__enabled: "false"
       NEO4J_dbms_databases_default__to__read__only: "true"
-      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
       # NEO4J_browser_remote__content__hostname__whitelist: "*"
       # NEO4J_browser_post__connect__cmd: "play https://meta-graph-guide.web.app/index.html"
     ports:
@@ -62,7 +49,10 @@ services:
     depends_on:
       import:
         condition: service_completed_successfully
-
+volumes:
+    biocypher_data:
+    biocypher_logs:
+    biocypher_html:
   # guide:
   #   image: nginx:alpine
   #   volumes:
