--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,22 @@ services:
     image: docker.io/slobentanzer/biocypher-base:1.0.0
     container_name: build
     volumes:
-      - ./config/biocypher_docker_config.yaml:/usr/app/config/biocypher_config.yaml
       - biocypher_data:/usr/app/data
-      - biocypher_logs:/usr/app/biocypher-log
-      - .:/usr/app/
+      - ./biocypher-log:/usr/app/biocypher-log
+      - .:/src/
     environment:
       BIOCYPHER_GITHUB_PROJECT_TOKEN: ${BIOCYPHER_GITHUB_PROJECT_TOKEN}
     command:
       - /bin/bash
-      - /usr/app/scripts/build.sh
+      - /src/scripts/build.sh
 
   import:
     image: neo4j:4.4-enterprise
     container_name: import
-    env_file:
-      - envs/import.env
+    environment:
+      NEO4J_AUTH: none
+      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+      FILL_DB_ON_STARTUP: "yes"
     volumes:
       - biocypher_data:/data
       - ./scripts/import.sh:/scripts/import.sh
@@ -36,11 +37,10 @@ services:
     container_name: deploy
     volumes:
       - biocypher_data:/data
-    env_file:
-      - envs/deploy.env
     environment:
       NEO4J_dbms_security_auth__enabled: "false"
       NEO4J_dbms_databases_default__to__read__only: "true"
+      NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
       # NEO4J_browser_remote__content__hostname__whitelist: "*"
       # NEO4J_browser_post__connect__cmd: "play https://meta-graph-guide.web.app/index.html"
     ports:
@@ -51,8 +51,6 @@ services:
         condition: service_completed_successfully
 volumes:
     biocypher_data:
-    biocypher_logs:
-    biocypher_html:
   # guide:
   #   image: nginx:alpine
   #   volumes:
